# frejun-backend-task

./: .gitignore  README.md  pyproject.toml
frejun/: .env.sample  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
frejun/api/: admin.py  enum.py  factory.py  models.py  serializer.py  services.py  tests.py  urls.py  views.py
frejun/api/migrations/: 0001_initial.py
frejun/frejun/: asgi.py  settings.py  wsgi.py
